--- a/crt-webgl.html
+++ b/crt-webgl.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>CRT Shader – Raw WebGL2</title>
+  <title>GLSL Web CRT Shader</title>
   <style>
     :root { color-scheme: dark; }
     * { box-sizing: border-box; }
@@ -55,8 +55,8 @@
     <canvas id="crt-canvas"></canvas>
   </div>
   <div id="legend">
-    <strong>CRT Shader (WebGL2)</strong>
-    <span>GIF + shapes are composited on a 2D canvas, then go through the CRT shader pass.</span>
+    <strong>GLSL Web CRT Shader</strong>
+    <span>GIF + shapes are composited on a 2D canvas,<br>then go through the CRT shader pass.</span>
   </div>
   <script type="module" src="./crt-webgl.js"></script>
 </body>
